--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Conversion</title>
 		<link link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine" text="Conversion" />
 		<link href="css/service.css" rel="stylesheet" />
-		<script src="../jquery/jquery-2.1.3.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="js/inputs.js"></script>
 		<script src="js/fields.js"></script>
 	</head>
